# CRUD-fastapi-sqlmodel-postgresql

./: .gitignore  README.md  create_database.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
