[tool.poetry]
name = "fastapiproject13"
version = "0.1.0"
description = ""
authors = ["keyj9 <kyrillos.joe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
poetry = "^1.1.13"
sqlmodel = "0.0.6"
asgiref = "^3.5.0"
click = "^8.1.2"
h11 = "^0.13.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
sqlalchemy2-stubs = "^0.0.2-alpha.21"
typing-extensions = "^4.1.1"
SQLAlchemy-Utils = "^0.38.2"
colorama = "^0.4.4"
greenlet = "^1.1.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
